# low-level-playground

./: .editorconfig  .gitignore  README.md
asm/lab_1/: 1_2.c  1_2_system_info.c  1_3.c  1_4.c  1_5.c  1_6.c  1_7.c
asm/lab_2/: 2_2.cpp  2_3.cpp  2_4.cpp  2_5.cpp  2_6.cpp  2_7.cpp  2_8.cpp  2_9.cpp
asm/lab_3/: 3_1.cpp  3_2.cpp  3_3.cpp  3_4.cpp  3_5.cpp  3_6.cpp  3_7_arrays.cpp  3_7_instructions.cpp  3_8.cpp
asm/lab_4/: 4_1.CD.S  4_1.M.S  4_1.SV.S  4_1.c  4_2.CD.S  4_2.M.SV.S  4_2.c  4_3.CD.S  4_3.M.S  4_3.SV.S  4_4.CD.S  4_4.M.S  4_4.SV.S  4_4.c  4_5.CD.S  4_5.M.S  4_5.SV.S  4_6.CD.S  4_6.M.S  4_6.SV.S  4_6.c  README.md
asm/lab_5/: 5_1.SV.S  5_2.SV.S  5_3.SV.S  5_4.SV.S  5_5.SV.S  5_6.cc  5_7.cc  5_8.cc
asm/lab_6/: 6_1.SV.S  6_2.SV.S  6_3.SV.S  6_4.SV.S  6_5.SV.S  6_6.SV.S  README.md  main.c
asm/lab_7/: 7_1.c  7_2.c  7_3.M.S  7_3.c  7_4.M.S  7_5.M.S  7_6.M.S  README.md
concurrency_and_networking/lab5/src/: mutex.c
db/: CMakeLists.txt  README.md  conanfile.txt  mise.toml
db/database/: init_database.sh
db/libs/: CMakeLists.txt
db/libs/postgres/: CMakeLists.txt  postgres.c  postgres.h  types.h
db/src/: CMakeLists.txt  auth_crud.c  crud_demonstration.c  main.c  query_executor.c  representations.c  sql_injection.c
encoding/: CMakeLists.txt
encoding/analyze_unicode/: Makefile  analyze_unicode.c
encoding/apps/: CMakeLists.txt
encoding/apps/analyze_unicode/: CMakeLists.txt  main.c
encoding/apps/file_characteristics/: CMakeLists.txt  main.c  statistics.c  statistics.h  summary.c  summary.h
encoding/apps/substrings/: CMakeLists.txt  main.c  markov_model.c  markov_model.h  rle_analysis.c  rle_analysis.h  substrings.c
encoding/file_characteristics/: Makefile  arguments.c  file_characteristics.c  summary.c
encoding/libs/: CMakeLists.txt  Makefile
encoding/libs/arguments/: CMakeLists.txt  arguments.c  arguments.h
encoding/libs/common/: CMakeLists.txt  types.h
encoding/libs/file/: CMakeLists.txt  file.c  file.h
encoding/libs/markov_model/: CMakeLists.txt
encoding/libs/rle/: CMakeLists.txt  rle.c  rle.h
encoding/libs/unicode/: CMakeLists.txt  unicode.c  unicode.h
encoding/tests/stub/: 6.txt  7.txt
file_format/: CMakeLists.txt
file_format/apps/: CMakeLists.txt
file_format/apps/compressed_archive_codec/: CMakeLists.txt  coder.c  coder.h  decoder.c  decoder.h  main.c
file_format/apps/huffman_analyzer/: CMakeLists.txt  analyzer.c  analyzer.h  main.c
file_format/apps/raw_archive_codec/: CMakeLists.txt  coder.c  coder.h  decoder.c  decoder.h  main.c
file_format/libs/: CMakeLists.txt
file_format/libs/archive_builder/: CMakeLists.txt  compressed_archive_builder.c  compressed_archive_builder.h  raw_archive_builder.c  raw_archive_builder.h
file_format/libs/archive_format/: CMakeLists.txt  archive_format.c  archive_format.h  compressed_archive_format.c  compressed_archive_format.h
file_format/libs/archive_header/: CMakeLists.txt  compressed_archive_header.c  compressed_archive_header.h  raw_archive_header.c  raw_archive_header.h
file_format/libs/archive_reader/: CMakeLists.txt  compressed_archive_reader.c  compressed_archive_reader.h  raw_archive_reader.c  raw_archive_reader.h
file_format/libs/arguments/: CMakeLists.txt  arguments.c  arguments.h
file_format/libs/arithmetic/: CMakeLists.txt  arithmetic.c  arithmetic.h
file_format/libs/common/: CMakeLists.txt
file_format/libs/error_correction/: CMakeLists.txt  crc32.c  crc32.h
file_format/libs/file/: CMakeLists.txt  file.c  file.h
file_format/libs/file_system/: CMakeLists.txt  directory_tree.c  directory_tree.h  file.c  file.h  file_list.c  file_list.h  file_system.c  file_system.h
file_format/libs/file_table/: CMakeLists.txt  file_table.c  file_table.h
file_format/libs/huffman/: CMakeLists.txt  entropy.c  entropy.h  huffman.c  huffman.h
file_format/libs/lz77/: CMakeLists.txt  lz77.c  lz77.h
file_format/libs/lz78/: CMakeLists.txt  lz78.c  lz78.h
file_format/libs/markov_model/: markov_model.h
file_format/libs/path_utils/: CMakeLists.txt  path_utils.c  path_utils.h
file_format/libs/shannon/: CMakeLists.txt  shannon.c  shannon.h
parallel_programming/BucketJoin/: BucketJoin.sln  mise.toml
parallel_programming/BucketJoin/src/BucketJoin.Domain/: Entities.cs
parallel_programming/BucketJoin/src/BucketJoin.Infrastructure/: BucketJoin.Infrastructure.csproj  BucketJoinExecutor.cs  BucketJoinExecutorParallel.cs  DataGenerator.cs  DatabaseConfiguration.cs  SqlJoinExecutor.cs
parallel_programming/BucketJoin/src/BucketJoin.Presentation/: App.axaml  App.axaml.cs  BucketJoin.Presentation.csproj  MainWindow.axaml  MainWindow.axaml.cs  MainWindowViewModel.cs  Program.cs  app.manifest
parallel_programming/ParallelBucketJoin/: ParallelBucketJoin.sln  mise.toml
parallel_programming/ParallelBucketJoin/src/ParallelBucketJoin.Domain/: Entities.cs
parallel_programming/ParallelBucketJoin/src/ParallelBucketJoin.Infrastructure/: BucketMergeExecutor.cs  DataGenerator.cs  DatabaseConfiguration.cs  ParallelBucketJoin.Infrastructure.csproj  ParallelBucketMergeExecutor.cs
parallel_programming/ParallelBucketJoin/src/ParallelBucketJoin.Presentation/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ParallelBucketJoin.Presentation.csproj  Program.cs  app.manifest
testing/: CMakeLists.txt  README.md  conanfile.txt  mise.toml
testing/src/: CMakeLists.txt  calculations.c  calculations.h
testing/tests/: CMakeLists.txt
testing/tests/cmocka/: CMakeLists.txt  calculations.test.c
testing/tests/gtest/: CMakeLists.txt  calculations.test.cc
testing/tests/unity/: CMakeLists.txt  calculations.test.c
