add_subdirectory(archive_builder)
add_subdirectory(archive_header)
add_subdirectory(archive_reader)
add_subdirectory(arguments)
add_subdirectory(arithmetic)
add_subdirectory(common)
add_subdirectory(error_correction)
add_subdirectory(file_system)
add_subdirectory(file_table)
add_subdirectory(huffman)
add_subdirectory(path_utils)
add_subdirectory(rle)
add_subdirectory(shannon)
